styles/mediaqueries.css
@media screen and (max-height: 800px) {

    .background {
        background-attachment: fixed;
    }
}

@media screen and (max-width: 1000px) {

    .background {
        background-attachment: fixed;
    }

    .mainlogo_img {
        max-width: 80px;
    }

    .account-info-container {
        padding: 20px;
        width: 700px;
    }
}

@media screen and (max-width: 880px) {

    .checkout-cart {
        max-width: 800px;
    }

    .credibility {
        display: none;
    }

    .search-input {
        display: none;
    }

    .search-input-hamburger {
        display: flex;
        width: 100%;
        justify-content: center;
        align-items: center;
    }

    .submit-btn-hamburger {
        height: 39px;
        background-color: var(--white);
        padding: 0 10px ;
        font-size: 1.2rem;
        font-family: var(--tahoma);
        font-weight: bold;
    }

    .submit-btn-hamburger:hover {
        background-color: var(--darkgreen);
        color: var(--white);
        transition: 250ms ease-in-out;
    }

    #hamburger-search {
        display: inline-block;
        width: 50%;
        border-right: none;
    }

    .hamburger {
        display: block;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }

    .nav-menu {
        position: absolute;
        display: none;
        right: -100%;
        top: 100px;
        overflow: hidden;
        justify-content: center;
        text-align: center;
        background-color: var(--white);
        transition: 0.4s ease-in-out;
    }

    .nav-menu ul {
        flex-direction: column;
    }

    .nav-menu input {
        margin: 10px 0;
        height: 25px;
    }

    .nav-menu ul li {
        margin-top: 20px;
    }

    .nav-menu.active {
        display: block;
        position: absolute;
        z-index: 5;
        right: 0;
        width: 100%;
        height: 250px;
        top: 107px;
        border: 2px solid var(--darkgreen);
    }

    .footer-container {
        display: flex;
        flex-direction: column-reverse;
        background-color: var(--darkgreen);
        color: var(--white);
        width: 100%;
    }

    .shop-cta,
    .shop-cta-shop {

        gap: 30px;
    }

    .filter-main-container {
        display: flex;
        justify-content: center;
        margin: 10px auto;
    }

    .filter-container-all {
        display: none;
        flex-direction: column;
        align-items: center;
        position: absolute;
        top: 0;
        left: -100%;
        max-width: 800px;
        background-color: var(--white);
        transition: 250ms ease-in-out;
    }

    .filter-container-all.active {
        display: flex;
        width: 90%;
        position: absolute;
        top: 370px;
        left: 0;
        right: 0;
    }

    .filter-close-btn.active {
        display: flex;
        justify-content: center;
    }

    .filter-menu-open {
        display: flex;
        cursor: pointer;
        padding: 10px;
        height: 40px;
        width: 200px;
    }

    .filter-button {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .size-list.active,
    .color-list.active,
    .activity-list.active,
    .sortby-list.active {
        display: block;
        background-color: var(--white);
        position: relative;
        width: 100%;
        text-align: center;
    }

    .products,
    .random-products-container {
        max-width: 1000px;
        margin: 30px auto;
        gap: 20px;
    }

    .product,
    .random-product {
        margin: 0px;
        padding: 5px;
        display: flex;
        flex: 1 1 140px;
        max-width: 200px;
    }

    .contact-main {
        justify-content: space-between;
        flex-direction: column-reverse;
        max-width: 400px;
        align-items: center
    }

    .contact_social_media {
        gap: 10px;
        margin: 0 auto;
    }

    .about-container img {
        height: auto;
    }

    .about-container {
        padding: 5px;
    }

    .about_section1,
    .about_section2 {
        flex: 1 1 400px;
        max-width: 400px;
        min-width: 200px;
        display: flex;
        justify-content: space-between;
    }

    .about_section1 h1,
    .about_section2 h1 {
        font-size: 1.3rem;
    }

    .about_section1 p,
    .about_section2 p {
        font-size: 0.8rem;
    }

    .details {
        flex-direction: column;
    }

    .details-product-image {
        max-height: fit-content;
        border: none;
        padding: 0;
    }

    .details-info {
        padding: 0px 30px;
        flex-direction: column-reverse;
    }

    .cart-header h1 {
        font-size: 1.3rem;
        margin-bottom: 10px;
    }

    .cart-container {
        width: 90%;
        margin: 0 auto;
    }

    .cart-item {
        gap: 10px;
    }

    .cart-cta-container {
        gap: 30px;
        margin-top: 30px;
    }

    .checkout-input-container {
        flex-direction: column;
    }

    .checkout-cvv {
        flex-direction: column;
    }

    .checkout-year {
        display: flex;
        flex-direction: column;
    }

    .account-info-header h1 {
        font-size: 1.4rem;
    }

    .account-info-container {
        width: 80%;
    }

    .account-info-container h2 {
        font-size: 1rem;
    }

    .profile-form-container label {
        font-size: 0.8rem;
    }

    .account-profile-container {
        border: none;
        padding-left: 5px;
        width: 100%;
    }

    .account-info-details {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        gap: 50px;
        width: 100%;
        padding: 5px;
    }

    .account-orders-container {
        display: flex;
        flex-direction: column;
        align-content: flex-start;
        width: 100%;
    }

    .order-item a {
        font-size: 0.7rem;
        font-weight: 600;
    }

    .order-item img {
        max-height: 50px;
        padding: 2px;
    }

    .product-image,
    .random-product-image {
        background-size: cover;
        height: 150px;
        transition: 250ms ease-in-out;
    }

    .checkout-main {
        width: 90%;
    }

}

@media screen and (max-width: 600px) {

    .main_img h1 {
        margin: 1.5rem 1rem;
        font-size: 1.4rem;
    }

    h2 {
        font-size: 1rem;
    }

    .details-random-products-header h2 {
        font-size: 1.2rem;
    }

    .quotes-container {
        flex-direction: column;
        gap: 20px;
    }

    .quotes1 {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        margin: auto 20px;
    }

    .quotes2 {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        margin: auto 20px;
    }

    .account-header {
        padding: 10px;
    }

    .account-form-container {
        width: 90%;
        gap: 10px;
        margin-top: 10px;
    }

    #account-signup,
    #account-login {
        width: 80%;
    }

    .toggle-form button {
        max-width: 90%;
    }

    .checkout-cart {
        padding: 5px;
        margin: 10px auto;
    }

    .checkout-main {
        width: 95%;
    }

}

@media screen and (max-width: 500px) {

    .navbar {
        padding: 5px;
    }

    .cart-container {
        width: 100%;
        padding: 2px;
    }

    .cart-item {
        width: 100%;
        justify-content: space-evenly;
        gap: 1%;
    }

    .cart-cta-container {
        width: 100%;
        gap: 20px;
        justify-content: center;
    }

    .cart-cta-container a {
        width: 140px;
    }

    .cart-quantity button,
    .cart-delete-item button {
        height: 20px;
        width: 20px;
        font-size: 0.6rem;
    }

    .cart-image img {
        max-width: 40px;
    }

    .cart-name p {
        display: none;
    }

    .cart-name h2 {
        font-size: 0.7rem;
    }

    .contact-info a,
    .contact-info p {
        font-size: 0.8rem;
    }

    .main_img h1 {
        font-size: 1.1rem;
    }

    .shop-title h1 {
        font-size: 1.5rem;
    }

    .product,
    .random-product {
        margin: 0px;
        padding: 5px;
        display: flex;
        flex: 1 1 10px;
    }

    .cart-price-size-color-info {
        display: flex;
    }
    
    .cart-size-color-details{
        flex-direction: column;
    }

    .about-container img {
        max-width: 100%;
        max-height: 100%;
    }

    .filter-container-all.active {
        top: 350px;
    }

    .product-image,
    .random-product-image {
        background-size: cover;
        height: 100px;
        width: auto;
        transition: 250ms ease-in-out;
    }

    #shop-cta-all {
        display:flex;
        text-align: center;
    }
    
    #cta-all-shop {
        display: none
    }

    .nav-menu.active {
        top: 97px;
    }

}

@media screen and (max-width: 320px) {

    .shop-title h1 {
        font-size: 1.1rem;
    }

    .cart-image img {
        max-width: 10px;
    }

    .shop-cta a,
    .shop-cta-shop a {
        height: 40px;
        width: 90px;
    }

    .details-container {
        padding: 0;
    }

    .cart-cta-container {
        width: 100%;
        gap: 20px;
        justify-content: center;
        flex-direction: column;
        align-items: center;
    }

    .cart-cta-container a {
        width: 150px;
    }

    .account-main {
        max-width: 280px;
    }

    .account-form-container {
        max-width: 280px;
        gap: 10px;
    }

    .filter-container-all.active {
        top: 340px;
    }

}

